# haskellbookcode

./: haskellbookcode.cabal  stack.yaml
src/: Chapter11.hs  Misc.hs
src/Chapter11/: BinaryTree.hs  Cards.hs
src/Chapter12/: Exercises.hs  MonadThrowExample.hs
src/Chapter15/: Optional.hs
src/Chapter16/: FunctorInstances.hs
src/Chapter17/: TypeCheck.hs  ZipList.hs
src/Chapter18/: Bind.hs  DoSomething.hs  EighteenPointSeven.hs
src/Chapter22/: DirectArgPassing.hs  Reader.hs  ReaderNewType.hs  ReaderTypeAlias.hs  ReaderTypeAlias2.hs
src/Chapter23/: StackCalc1.hs  StackCalc2.hs
src/Chapter24/: ConfigParser.hs  Exercise.hs  Exercises.hs  FractionParser.hs  NumberOrString.hs  PhoneNumberParser.hs  UnitOfSuccess.hs
src/Chapter25/: TwinPlicative.hs
src/Chapter9/: EnumFromTo.hs  Filtering.hs  MoreBottoms.hs  SquareCube.hs  ThyFearfulSymmetry.hs  Zipping.hs
test/: Checkers.hs  Spec.hs
test/HaskellBook/Test/Chapter15/: Optional.hs
