name:                haskellbookcode
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskellbookcode#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Chapter9.EnumFromTo
                     , Chapter9.ThyFearfulSymmetry
                     , Chapter9.SquareCube
                     , Chapter9.MoreBottoms
                     , Chapter9.Filtering
                     , Chapter9.Zipping
                     , Chapter11
                     , Chapter11.BinaryTree
                     , Chapter12.Exercises
                     , Chapter12.MonadThrowExample
                     , Chapter15.Optional
                     , Chapter16.FunctorInstances
                     , Chapter17.TypeCheck
                     , Chapter17.ZipList
                     , Chapter18.Bind
                     , Chapter18.DoSomething
                     , Chapter18.EighteenPointSeven
                     , Chapter22.Reader
                     , Chapter23.StackCalc1
                     , Chapter23.StackCalc2
                     , Chapter24.Exercises
                     , Chapter24.ConfigParser
                     , Chapter24.UnitOfSuccess
                     , Chapter24.FractionParser
                     , Chapter24.NumberOrString
                     , Chapter25.TwinPlicative
                     , Misc
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , exceptions
                     , raw-strings-qq
                     , text
                     , transformers
                     , trifecta
                     , parsers
                     , QuickCheck
  default-language:    Haskell2010

executable haskellbookcode-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellbookcode
  default-language:    Haskell2010

test-suite haskellbookcode-test-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec == 2.2.2
                     , haskellbookcode
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite haskellbookcode-test-checkers
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Checkers.hs
  build-depends:       base
                     , QuickCheck == 2.8.1
                     , checkers == 0.4.4
                     , haskellbookcode
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskellbookcode
